--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <label>Slack ID:</label>
     <input type="text" id="slackId" name="slackId" required>
 
+    <label>Title:</label>
+    <input type="text" id="title" name="title" required placeholder="e.g.,  store bridge or version id">
+
     <label>Option:</label>
     <select id="option" name="option" required>
       <option value="">Select</option>
