--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <h2>GTWY.AI — The AI & Automation Core of WalkOver</h2>
 
     <label>Name:</label>
-    <input type="text" id="name" name="name" required>
+    <input type="text" id="name" name="name" placeholder="e.g., John Doe" required>
 
-    <label>Slack ID:</label>
-    <input type="text" id="slackId" name="slackId" required>
+    <label>Email:</label>
+    <input type="text" id="email" name="email" placeholder="e.g., john.doe07@gmail.com" required>
 
     <label>Title:</label>
     <input type="text" id="title" name="title" required placeholder="e.g.,  store bridge or version id">
