--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     // Pre-fill form fields from URL
     window.onload = function() {
       const name = getParam("name");
-      const slackId = getParam("slackId");
+      const title = getParam("title");
       const option = getParam("option");
       const eta = getParam("eta");
       const status = getParam("status");
