--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       const status = getParam("status");
 
       if (name) document.getElementById("name").value = name;
-      if (slackId) document.getElementById("slackId").value = slackId;
+      if (title) document.getElementById("title").value = title;
       if (option) {
         document.getElementById("option").value = option;
         toggleFields(option); // Show correct fields
@@ -110,7 +110,7 @@
 
       const data = {
         name: document.getElementById("name").value,
-        slackId: document.getElementById("slackId").value,
+        slackId: document.getElementById("title").value,
         option: document.getElementById("option").value,
         eta: document.getElementById("eta").value || null,
         status: document.getElementById("status").value || null
