--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <input type="text" id="name" name="name" required>
 
     <label>title</label>
-    <input type="text" id="title" name="title" required>
+    <input type="text" id="fromtitle" name="title" required>
 
     <label>Option:</label>
     <select id="option" name="option" required>
@@ -96,7 +96,7 @@
       const status = getParam("status");
 
       if (name) document.getElementById("name").value = name;
-      if (title) document.getElementById("title").value = title;
+      if (title) document.getElementById("fromtitle").value = title;
       if (option) {
         document.getElementById("option").value = option;
         toggleFields(option); // Show correct fields
