--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
       const data = {
         name: document.getElementById("name").value,
-        slackId: document.getElementById("title").value,
+        slackId: document.getElementById("fromtitle").value,
         option: document.getElementById("option").value,
         eta: document.getElementById("eta").value || null,
         status: document.getElementById("status").value || null
