--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
       border-radius: 8px;
       cursor: pointer;
       font-weight: bold;
+      position: relative;
+      z-index: 9999;
     }
     button:hover {
       background: #4547a3;
