--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
       </select>
     </div>
 
+    <label>Reason:</label>
+    <input type="text" id="reason" name="reason" required/>
+
     <button type="submit" id="submitBtn">Submit</button>
   </form>
 
